# NeyYear2025-School

./: README.md
backend/: admin_token.txt  conftest.py  pyproject.toml  pytest.ini  student_token.txt  teacher_token.txt
backend/apps/academic/: exceptions.py  models.py  serializers.py  urls.py  views.py
backend/apps/academic/migrations/: 0001_initial.py  0002_academicyear_end_month_academicyear_start_month.py  0002_initial.py  0003_academicyear_school.py  0004_alter_academicyear_school.py
backend/apps/academic/tests/: conftest.py  test_academic_year.py
backend/apps/accounts/: models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_studentprofile_address_studentprofile_gender_and_more.py  0003_user_school_alter_studentprofile_user.py  0004_alter_user_managers.py  0005_alter_user_school.py
backend/apps/accounts/tests/: conftest.py  test_auth.py  test_students.py
backend/apps/communication/: serializers.py  views.py
backend/apps/communication/migrations/: 0001_initial.py
backend/apps/core/: exceptions.py  logging_config.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py  0002_school_is_active.py  0003_school_auto_create_schema.py
backend/apps/core/tests/: test_school_approval.py
backend/apps/finance/: models.py  serializers.py  views.py
backend/config/: public_urls.py  settings.py  urls.py
backend/scripts/: create_test_tenant.py  setup_test_db.py  setup_test_env.py  setup_test_tenant.py
docs/: API_DOCUMENTATION.md  (+8 more)
(+258 files in other folders)
